--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a classical percussionist who has recently decided to move into software development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Springfield, PA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Music, video games, cooking and running.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Expert hot chocolate consultant.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Chicago, IL</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I think it's the perfect marriage of logic and creativity, and it would be great to make a career of it.</p>
     </section>
 
     <footer id="footer">
