--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I'm a classical percussionist who has recently decided to move into software development.</p>
+      <p>I'm a classical percussionist who has recently decided to move into web development.</p>
       <h1>Where I'm From</h1>
       <p>Springfield, PA</p>
       <h1>What are your favorite hobbies?</h1>
